<resources>
    <string name="app_name">News</string>
    <string name="health">health</string>
    <string name="science">science</string>
    <string name="sports">sports</string>
    <string name="technology">technology</string>
    <string name="general">general</string>
    <string name="entertainment">entertainment</string>
    <string name="business">business</string>
    <string name="search">Search</string>
</resources>